# btrfs-assistant

./: .clang-format  .gitignore  Btrfs.cpp  Btrfs.h  BtrfsAssistant.cpp  BtrfsAssistant.h  BtrfsMaintenance.cpp  BtrfsMaintenance.h  CMakeLists.txt  Cli.cpp  Cli.h  DiffViewer.cpp  DiffViewer.h  DiffViewer.ui  FileBrowser.cpp  FileBrowser.h  FileBrowser.ui  README.md  Settings.cpp  Settings.h  Snapper.cpp  Snapper.h  SubvolModel.cpp  SubvolModel.h  System.cpp  System.h  btrfs-assistant  btrfs-assistant.conf  btrfs-assistant.cpp  btrfs-assistant.desktop  btrfs-assistant.h  btrfs-assistant.ui  changelog  icons.qrc  main.cpp
docs/: CMakeLists.txt  CONTRIBUTING.md
icons/: CMakeLists.txt  icons.qrc
src/: CMakeLists.txt  btrfs-assistant  btrfs-assistant-launcher  btrfs-assistant.conf  btrfs-assistant.desktop  btrfs-assistant.metainfo.xml  main.cpp
src/model/: CMakeLists.txt  SubvolModel.cpp  SubvolModel.h
src/ui/: BtrfsAssistant.cpp  BtrfsAssistant.h  CMakeLists.txt  Cli.cpp  Cli.h  DiffViewer.cpp  DiffViewer.h  DiffViewer.ui  FileBrowser.cpp  FileBrowser.h  FileBrowser.ui  MainWindow.cpp  MainWindow.h  MainWindow.ui  RestoreConfirmDialog.cpp  RestoreConfirmDialog.h  RestoreConfirmDialog.ui  SnapshotSubvolumeDialog.cpp  SnapshotSubvolumeDialog.h  SnapshotSubvolumeDialog.ui  btrfs-assistant.ui
src/util/: Btrfs.cpp  Btrfs.h  BtrfsMaintenance.cpp  BtrfsMaintenance.h  CMakeLists.txt  CsvParser.cpp  CsvParser.h  Settings.cpp  Settings.h  Snapper.cpp  Snapper.h  System.cpp  System.h
src/widgets/: CMakeLists.txt  FilterLineEdit.cpp  FilterLineEdit.h
widgets/: FilterLineEdit.cpp
